Default colors now defined in just one place. Some field identifiers changed to fit common convention.

--- a/BlackSpace/BlackSpace.csproj
+++ b/BlackSpace/BlackSpace.csproj
@@ -61,6 +61,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BlackSpaceOptionsPackage.cs" />
+    <Compile Include="ColorExtensions.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="DeleteWhiteSpaceWhenSavingCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BlackSpaceAdornment.cs" />
