--- a/BlackSpace/BlackSpace.csproj
+++ b/BlackSpace/BlackSpace.csproj
@@ -58,6 +58,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DeployExtension>False</DeployExtension>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BlackSpaceOptionsPackage.cs" />
